fix contrast error
darken purple

--- a/colors.css
+++ b/colors.css
@@ -5,5 +5,5 @@
     --orange: #f8991d;
     --green: #3db65d;
     --blue: #7ecee7;
-    --purple: #8e68ad;
+    --purple: #7A5298;
 }
